zlib/zlib/configure.log
--------------------
./configure --help
Fri Sep 20 11:07:22 PDT 2013
usage:
  configure [--const] [--zprefix] [--prefix=PREFIX]  [--eprefix=EXPREFIX]
    [--static] [--64] [--libdir=LIBDIR] [--sharedlibdir=LIBDIR]
    [--includedir=INCLUDEDIR] [--archs="-arch i386 -arch x86_64"]
--------------------
./configure --prefix=/usr --archs=-arch i386 -arch x86_64
Fri Sep 20 11:09:06 PDT 2013
Checking for gcc...
=== ztest49714.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c ztest49714.c
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest49714.c ===
int foo() { return 0; }
===
gcc -c -O3 -arch i386 -arch x86_64 ztest49714.c

Checking for shared library support...
=== ztest49714.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -w -c -O3 -arch i386 -arch x86_64 -fPIC ztest49714.c
gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.8 -O3 -arch i386 -arch x86_64 -fPIC -o ztest49714.dylib ztest49714.o
Building shared library libz.1.2.8.dylib with gcc.

=== ztest49714.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -O3 -arch i386 -arch x86_64 -D_LARGEFILE64_SOURCE=1 ztest49714.c
ztest49714.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
off64_t dummy = 0;
^~~~~~~
off_t
/usr/include/sys/_types/_off_t.h:30:25: note: 'off_t' declared here
typedef __darwin_off_t          off_t;
                                ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest49714.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
gcc -O3 -arch i386 -arch x86_64 -o ztest49714 ztest49714.c
Checking for fseeko... Yes.

=== ztest49714.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
gcc -O3 -arch i386 -arch x86_64 -o ztest49714 ztest49714.c
Checking for strerror... Yes.

=== ztest49714.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -O3 -arch i386 -arch x86_64 ztest49714.c
Checking for unistd.h... Yes.

=== ztest49714.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -O3 -arch i386 -arch x86_64 ztest49714.c
Checking for stdarg.h... Yes.

=== ztest49714.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -O3 -arch i386 -arch x86_64 ztest49714.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest49714.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -O3 -arch i386 -arch x86_64 -o ztest49714 ztest49714.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest49714.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -O3 -arch i386 -arch x86_64 ztest49714.c
Checking for return value of vsnprintf()... Yes.

=== ztest49714.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -O3 -arch i386 -arch x86_64 ztest49714.c
Checking for attribute(visibility) support... Yes.

ALL = static shared
AR = libtool
ARFLAGS = -o
CC = gcc
CFLAGS = -O3 -arch i386 -arch x86_64 -DHAVE_HIDDEN
CPP = gcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS = -arch i386 -arch x86_64
LDSHARED = gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.8
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -O3 -arch i386 -arch x86_64 -fPIC -DHAVE_HIDDEN
SHAREDLIB = libz.dylib
SHAREDLIBM = libz.1.dylib
SHAREDLIBV = libz.1.2.8.dylib
STATICLIB = libz.a
TEST = all teststatic testshared
VER = 1.2.8
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr
sharedlibdir = ${libdir}
uname = Darwin
--------------------


--------------------
./configure -h
Thu Sep 26 12:55:23 PDT 2013
usage:
  configure [--const] [--zprefix] [--prefix=PREFIX]  [--eprefix=EXPREFIX]
    [--static] [--64] [--libdir=LIBDIR] [--sharedlibdir=LIBDIR]
    [--includedir=INCLUDEDIR] [--archs="-arch i386 -arch x86_64"]
